--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
      margin: 0;
      padding: 0;
 
@@ -119,4 +119,4 @@ a {
      color: red;
      font-weight: bold;
      margin-bottom: 10px;
-}
+} */
