--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -138,7 +138,7 @@
 
 
           <h3>Please Login Yourself</h3>
-          <form action="" th:action= "${/login}" method="post">
+          <form action="" th:action="@{/login}" method="post">
                <!-- CSRF Token -->
                <input type="hidden" name="_csrf" value="${_csrf.token}" />
 
@@ -157,7 +157,7 @@
 
 
           </form>
-          <span>Don't have Account?<a href="/register" th:href= "@{/register}"> Register Here</a></span>
+          <span>Don't have Account?<a href="/register" th:href="@{/register}"> Register Here</a></span>
      </div>
      <div th:if="${error}" class="error-message">
           Invalid username or password!
